fix overflow and add subtitle

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   
   <div class="container" id="game-container">
     <div id="title">bLocked 🤬</div>
+    <div id="subtitle">The hardest game you'll play today</div>
     <div id="grid"></div>
-    <div id="score">Score: 0</div>
+    <div id="score">Score: <span id="score-value"></span> / 50</div>
     <div id="button-container">
       <button class="button" id="reset-button">Reset</button>
       <button class="button" id="rules-button">Rules</button>
